--- a/AirMojo/package.json
+++ b/AirMojo/package.json
@@ -1,4 +1,7 @@
 {
+  "engines": {
+    "node": "22.12.0" 
+  },
   "name": "airmojo",
   "version": "1.0.0",
   "main": "Phase1_partA.js",
@@ -12,6 +15,7 @@
   "dependencies": {
     "cloudinary": "^1.37.3",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
