--- a/BuildingZoom/Backened/package.json
+++ b/BuildingZoom/Backened/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon src/app.js",
     "start": "node src/app.js",
-    "prod": "pm2 src/app.js"
+    "prod": "pm2 start src/app.js"
   },
   "author": "Utkarsh",
   "license": "ISC",
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
     "http-status": "^2.1.0",
