Changes in Landing Page

--- a/React/Part1/DeltaReact/react-state-class/package.json
+++ b/React/Part1/DeltaReact/react-state-class/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
+    "@emotion/react": "^11.14.0",b
     "@emotion/styled": "^11.14.1",
     "@fontsource/roboto": "^5.2.6",
     "@mui/icons-material": "^7.2.0",
